News UAT/force-app/main/default/objects/CPQ_Approver__c/CPQ_Approver__c.object-meta.xml
<CustomObject>
    <label>CPQ Approver</label>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Approver</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>