News UAT/force-app/main/default/objects/CPQ_Approver__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <label>Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Found</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
            <value>
                <fullName>Same Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>