News UAT/force-app/main/default/objects/CPQ_Approver__c/fields/L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPQ_Approvers1</relationshipName>
    <type>Lookup</type>
</CustomField>