News UAT/force-app/main/default/objects/CPQ_Approver__c/fields/L2_Approver__c.field-meta.xml
<CustomField>
    <fullName>L2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPQ_Approvers2</relationshipName>
    <type>Lookup</type>
</CustomField>