News UAT/force-app/main/default/objects/CPQ_Approver__c/fields/L3_Approver__c.field-meta.xml
<CustomField>
    <fullName>L3_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPQ_Approvers3</relationshipName>
    <type>Lookup</type>
</CustomField>