News UAT/force-app/main/default/objects/CPQ_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Rep__c</columns>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Approval_Level__c</columns>
    <columns>L1_Approver__c</columns>
    <columns>L2_Approver__c</columns>
    <columns>L3_Approver__c</columns>
    <columns>L4_Approver__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>equals</operation>
        <value>Nikki Roche</value>
    </filters>
    <label>All</label>
</ListView>